--- a/contracts/contracts/auto-release-escrow-contract/Cargo.toml
+++ b/contracts/contracts/auto-release-escrow-contract/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
-name = "hello-world"
-version = "0.0.0"
-edition = "2021"
-publish = false
+name = "auto-release-escrow-contract"
+version = "0.1.0"
+edition = "2024"
 
 [lib]
-crate-type = ["lib", "cdylib"]
-doctest = false
+crate-type = ["cdylib"]
 
 [dependencies]
 soroban-sdk = { workspace = true }
 
 [dev-dependencies]
 soroban-sdk = { workspace = true, features = ["testutils"] }
+
+[features]
+testutils = ["soroban-sdk/testutils"]
